radicale/service.yml
apiVersion: v1
kind: Service
metadata:
  name: radicale
  labels:
    app: radicale
spec:
  ports:
  - name: http
    port: 5232
  selector:
    app: radicale
