radicale/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: radicale
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.frontend.passHostHeader: "true"
    traefik.backend.loadbalancer.stickey: "true"
spec:
  rules:
  - host: dav.leangeder.eu
    http:
      paths:
      # - path: /
      - backend:
          serviceName: radicale
          servicePort: http
